added timer to the js file

--- a/index.html
+++ b/index.html
@@ -15,54 +15,17 @@
 
         <top class="top">
             <button class="scores">View Highscores</button>
-            <p class="timer">Time: 00:00</p>
+            <p class="timer"></p>
         </top>
 
-        <section class="intro">
+        <section class="intro" id="question-text">
             <h1>Coding Quiz</h1>
             <p class="info">Try to answer the following code-related questions within the time limit.
                 Keep in mind that incorrect answers will penalize your time by ten seconds!
             </p>
-            <button class="button">Start Quiz</button>
+            <button class="button" onclick="startQuiz()">Start Quiz</button>
         </section>
-        <main>
-            <questions class="questions">
-                <h2>Commonly used data types Do Not include?</h2>
-                <ul>
-                    <li><button>string</button></li>
-                    <li><button>booleans</button></li>
-                    <li><button>alerts</button></li>
-                    <li><button>numbers</button></li>
-                </ul>
-                <h2>What does this "===" operation mean?</h2>
-                <ul>
-                    <li><button>really equal</button></li>
-                    <li><button>compares both values and types</button></li>
-                    <li><button>compares only values</button></li>
-                    <li><button>compares only types</button></li>
-                </ul>
-                <h2>What does DOM stand for?</h2>
-                <ul>
-                    <li><button>data object model</button></li>
-                    <li><button>device object mobile</button></li>
-                    <li><button>document object model</button></li>
-                    <li><button>domain object model</button></li>
-                </ul>
-                <h2>The condition in an if / else statement is enclosed with</h2>
-                <ul>
-                    <li><button>quotes</button></li>
-                    <li><button>curly brakets</button></li>
-                    <li><button>parenthesis</button></li>
-                    <li><button>square brackets</button></li>
-                </ul>
-                <h2>Arrays in JavaScript can be used to store what?</h2>
-                <ul>
-                    <li><button>numbers and strings</button></li>
-                    <li><button>other arrays</button></li>
-                    <li><button>booleans</button></li>
-                    <li><button>all of the above</button></li>
-                </ul>
-        </main>
+       
         <script src="./script.js"></script>
     </container>
 </body>
